Update DynamicTableService.java